--- a/index.html
+++ b/index.html
@@ -17,34 +17,34 @@
         </div>
         <div class="buttons">
             <div class="btn-1">
-                <button class="operator" data-value="AC">AC</button>
-                <button class="operator" data-value="DE">Del</button>
-                <button class="operator" data-value="%">%</button>
-                <button class="operator" data-value="/">÷</button>
+                <button onclick="calculator(this)" class="operator" value="AC">AC</button>
+                <button onclick="calculator(this)" class="operator" value="DE">Del</button>
+                <button onclick="calculator(this)" class="operator" value="%">%</button>
+                <button onclick="calculator(this)" class="operator" value="/">÷</button>
             </div>
             <div class="btn-2">
-                <button data-value="7">7</button>
-                <button data-value="8">8</button>
-                <button data-value="9">9</button>
-                <button class="operator" data-value="*">*</button>
+                <button onclick="calculator(this)" value="7">7</button>
+                <button onclick="calculator(this)" value="8">8</button>
+                <button onclick="calculator(this)" value="9">9</button>
+                <button onclick="calculator(this)" class="operator" value="*">*</button>
             </div>
             <div class="btn-3">
-                <button data-value="4">4</button>
-                <button data-value="5">5</button>
-                <button data-value="6">6</button>
-                <button class="operator" data-value="-">-</button>
+                <button onclick="calculator(this)" value="4">4</button>
+                <button onclick="calculator(this)" value="5">5</button>
+                <button onclick="calculator(this)" value="6">6</button>
+                <button onclick="calculator(this)" class="operator" value="-">-</button>
             </div>
             <div class="btn-4">
-                <button data-value="1">1</button>
-                <button data-value="2">2</button>
-                <button data-value="3">3</button>
-                <button class="operator" data-value="+">+</button>
+                <button onclick="calculator(this)" value="1">1</button>
+                <button onclick="calculator(this)" value="2">2</button>
+                <button onclick="calculator(this)" value="3">3</button>
+                <button onclick="calculator(this)" class="operator" value="+">+</button>
             </div>
             <div class="btn-5">
-                <button data-value="0">0</button>
-                <button data-value="00">00</button>
-                <button data-value=".">.</button>
-                <button class="operator" data-value="=">=</button>
+                <button onclick="calculator(this)" value="0">0</button>
+                <button onclick="calculator(this)" value="00">00</button>
+                <button onclick="calculator(this)" value=".">.</button>
+                <button onclick="calculator(this)" class="operator" value="=">=</button>
             </div>
         </div>
     </div>
